--- a/css/style.css
+++ b/css/style.css
@@ -6,30 +6,55 @@
     --white-gray:rgba(255, 255, 255, 0.6) ;
     --white: rgba(255, 255, 255, 1);
     --gray:rgba(117, 117, 117, 1);
-    --black-light:rgba(47, 48, 58, 1);
-}
+    --black-light:rgba(47, 48, 58, 1); 
+    --white-light: rgba(245, 244, 250, 1); }
+
+
+* {
+    margin:0;
+    padding:0;
+}    
+
 body{
     font-family: var(--primary-font);
     color:var(--black);
 }
 
+img {
+    display: block;
+    max-width: 100%;
+    height: auto; }
+
+.container{
+    width: 1200px;
+    margin-left:auto;
+    margin-right:auto;
+}
+
 /* Header Styles */
 
-.header {
+.header .container {
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
     background-color:var(--white);
-   
-}
-.header ul{
-    list-style:none;
-    text-decoration: none;
+    border: 1px solid rgba(236, 236, 236, 1);
 }
 
+.header__navigation ul{
+    list-style: none;
+    display: flex;
+    gap:50px;
+}
+ 
 .header__logo{
     text-decoration: none;
     font-family:var(--secondary-font);
     font-weight: 700;
     font-size:26px;
     line-height: 1.2em;
+    margin-top:24px;
+    margin-bottom:25px;
 }
 
 .logo__part {
@@ -40,12 +65,21 @@ body{
     font-weight: 500;
     font-size:14px;
     line-height: 1.4em;
+    text-decoration: none;
 }
 .header__navigation :hover,
 .header__navigation :focus{
     color:var(--blue);
 }
+
+.header__contacts ul {
+   display:flex;
+   gap:40px;
+   list-style: none;
+}
+
 .header__contacts a { 
+    text-decoration: none;
     color:var(--gray);
     font-weight: 500;
     font-size:14px;
@@ -60,10 +94,11 @@ body{
 
 /* Hero Section */
 
-.main__hero{
-    background-color: var(--black-light);
-    width: 1600px;
-    height: 600px;
+.main__hero .container {
+    background-color: var(--black-light);   
+    display: flex;
+    align-items: center;  
+    flex-direction: column;
 }
 
 .main-hero__title {
@@ -71,70 +106,132 @@ body{
     font-weight: 900;
     font-size:44px;
     line-height: 1.2em;
+    padding:200px 0px 30px 0px ;
+}
+.hero-title__text{
+    display: flex;
+    justify-content: center;
 }
 
-.hero__button button {
+
+.hero__button {
+    color:var(--white);
+    background-color:var(--blue);
     cursor: pointer;
     font-family: var(--primary-font);
     font-weight: 700;
     font-size: 16px;
     line-height: 1.2em;
+    padding:10px 19px 10px 20px;
+    border-radius:4px; 
+    border-color:var(--blue);
 }
-
- .hero__button :hover,
- .hero__button :focus {
-    color:var(--white);
-    background-color: var(--blue);
+.btn{
+    padding-bottom:200px;
 }
-
 
 /*About Section*/
+
+.main__about .container ul{
+    padding-top:94px;
+    display: flex;
+    align-items: center;
+}
 
 .main__about ul {
     text-decoration: none;
     list-style: none;
+    gap:30px;
 }
 
-.main-about__title {
+.main-about__title  {
     font-weight: 700;
     font-size:14px;
     line-height: 1.4em;
+    margin-bottom:10px;
 }
 
 .main-about__text {
     color:var(--gray);
     font-weight: 400;
     font-size: 14px;
-    line-height: 1.4em;
+    line-height: 1.5em;;
+    letter-spacing: 0.03em;
+
 }
+
 
 
 /* What We Do Section */
 
+.main__ocupation .container {
+    margin-top:94px;
+    margin-bottom: 94px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
 .main__ocupation ul {
     list-style: none;
     text-decoration: none;
+    display: flex;
+    gap:30px;
 }
 
 .main-ocupation__title {
     font-weight: 700;
     font-size:36px;
     line-height: 1.2em;
+    margin-bottom: 50px;
 } 
 
 
 /* Our Team Section */
 
+.main__team .container {
+    background-color:var(--white-light);
+    padding-top:94px;
+    padding-bottom:94px;
+
+}
+.team__cards{
+    display: flex;
+    align-items: center;
+    gap:30px;
+    justify-content: space-between;
+    border-radius:  0px, 0px, 4px, 4px;
+}
+
 .main-team__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.2em;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+.our-team__card1,
+.our-team__card2,
+.our-team__card3,
+.our-team__card4{
+    background-color:var(--white);
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+
 }
 
 .main-team__subtitle  {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.4em;
+    padding-top:30px;
+    padding-left:62px;
+    padding-right: 63px;
+    display: flex;
+    justify-content: center;
 }
 
 .main-team__text {
@@ -142,14 +239,31 @@ body{
     font-weight: 400px;
     font-size:16px;
     line-height: 1.4em;
+    display: flex;
+    justify-content: center;
 }
 
-/* Footer Styles */
-.footer{
-    background-color: var(--black-light);
-    width: 1600px;
-    height: 251px;
+.prod__text{
+    padding:10px 70px 30px 70px;
+}
+.front__text{
+    padding:10px 61px 30px 62px;
+}
+.marketing__text{
+    padding:10px 97px 30px 97px;
+}
+.ui__text{
+    padding:10px 91px 30px 92px;
+}
 
+
+/* Footer Styles */
+.footer .container{
+    background-color: var(--black-light);
+    height: 251px;
+    display: flex;
+    flex-direction: column;
+    
 }
 
 .footer__title {
@@ -159,6 +273,8 @@ body{
     font-weight: 700;
     font-size:26px;
     line-height: 1.2em;
+    padding-top:60px;
+    padding-bottom:28px;
 }
 
 .footer-title__part {
@@ -181,6 +297,12 @@ body{
     font-size:14px;
     font-style:normal;
     line-height:1.4em;
+    padding-bottom:12px;
+}
+
+.footer__phone{
+    padding-top:12px;
+    padding-bottom: 60px;
 }
 
 .footer__contacts a{
@@ -192,7 +314,7 @@ body{
     line-height: 1.4em;
 }
 
-.footer__contacts li a:hover,
+.footer__contacts li a  :hover,
 .footer__contacts li a  :focus {
     color:var(--blue);
 }
@@ -202,9 +324,16 @@ body{
 
 /* Main Styles */
 
+
 .portfolio-main__buttons ul {
     text-decoration: none;
     list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:8px;
+    margin-top:94px;
+    margin-bottom:50px;
 }
 
 .portfolio__nav button {
@@ -214,7 +343,12 @@ body{
     font-size:16px;
     line-height: 1.4em;   
     cursor: pointer;
+    border-radius: 4px;
+    border-color:var(--white);
+    padding:6px 22px;
+    border: 1px solid rgba(238, 238, 238, 1);
 }
+
 
 .port__btn :hover,
 .port__btn :focus {
@@ -224,16 +358,32 @@ body{
 
 /* Presenation Section */
 
+.portf__cards{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap:30px;
+    margin-bottom:94px;
+}
+
+.portf__card {
+    background-color: var(--white);
+    border: 1px solid rgba(238, 238, 238, 1); 
+    border-radius:1px;
+}
+
 .port-content__titles{
     font-weight: 700;
     font-size:18px;
     line-height: 1.2em;
+    padding:20px 24px 4px 24px;
 }
 
 .port-content__text  {
     color:var(--gray);
     font-size:16px;
     line-height:1.2em;
+    padding:0px 24px 20px 24px;
 }
 
 
